# lodestar

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  INSTALL-FOR-AI.md  LICENSE  README.md  SMOKE-TEST.md  TROUBLESHOOTING.md  requirements-pdf.txt  requirements.txt
_archive/: README.md
config/: README.md
daily-watchlist-reports/: README.md
examples/: README.md
hypothesis/: README.md
inbox/: README.md  first-note.md
monitoring/: README.md  watchlist.md
output/: README.md
portfolio/: README.md
system/: README.md
tests/: README.md  _test_paths.py  conftest.py  test_daily_watch_fixes.py  (+6 more)
tools/daily-watch/: README.md  pyproject.toml  requirements-tushare.txt
tools/daily-watch/config-examples/: daily-watchlist.env.example  daily-watchlist.example.yaml  daily-watchlist.watchlist.example.md  hypothesis-tracker.example.yaml  hypothesis-tracker.rules.example.md
tools/daily-watch/scripts/: check_setup.py  fetch_macro_data.py  fetch_market_data.py  generate_daily_report.py  sync_hypothesis.py  trade_stats.py  workspace_paths.py
tools/daily-watch/templates/: daily-watchlist-report-template.md  hypothesis-tracker-hypothesis-template.md  hypothesis-tracker-journal-template.md  hypothesis-tracker-report-template.md
tools/podcast/: .env.example  README.md  pyproject.toml  requirements-transcribe.txt  requirements.txt
tools/podcast/examples/: config.ai-investing.yaml
tools/podcast/scripts/: fetch_podcasts.py  llm_client.py  podcast_batch_summarize.py  podcast_feed_registry.py  podcast_rss_transcribe.py  proxy_config.py
(+40 files in other folders)
